logo con canvas

--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 <body>
 
     <div id="container">
+        <div>
+            <img id='logo-juego' src="./images/roadtohell.png" alt="">
+        </div>
 
         <!-- SPLASH SCREEN -->
         <div id="splash-screen">
-            <img src="./images/roadtohell.png" alt="">
+ 
             <div>
                 <button class="btn-bg"><img src="./images/btn-start.png" alt=""> </button>
-            </div>
+            </div>    
             <div id="devil">
                 <img src="./images/devil2.png" alt="">
             </div>
         </div>
 
         <!-- GAME SCREEN -->
-        <canvas id="my-canvas" width="650" height="800"></canvas>
+        <canvas id="my-canvas" width="650" height="600"></canvas>
 
         <!-- GAME OVER SCREEN -->
         <div id="gameover-screen" class="container">
