--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </div>
     <script src="./javascript/main.js"></script>
     <script src="./javascript/game.js"></script>
-    <!-- <script src="angus.js"></script>
-        <script src="cura.js"></script>
-        <script src="cerveza.js"></script>
-        <script src="obispo.js"></script> -->
+    <script src="./javascript/angus.js"></script>
+    <script src="./javascript/cura.js"></script>
+    <script src="./javascript/cerveza.js"></script>
+    <script src="./javascript/obispo.js"></script> -->
 </body>
 
 </html>
