--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- GAME OVER SCREEN -->
         <div id="gameover-screen" class="container">
-            <!-- <img src="./images/gameover.png" width="500" alt="logo"> -->
+            <img src="./images/gameover.png" width="500" alt="logo">
             <button id="restart-btn">Prueba de nuevo</button>
         </div>
     </div>
