botones gameover entrelazados

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!-- SPLASH SCREEN -->
         <div id="splash-screen">
  
-            <div>
-                <button class="btn-bg"><img src="./images/btn-start.png" alt=""> </button>
+            <div class='btn-principal'>
+                <button class="btn-bg">DALE CAÑA!</button>
             </div>    
             <div id="devil">
                 <img src="./images/devil2.png" alt="">
@@ -33,7 +33,10 @@
         <!-- GAME OVER SCREEN -->
         <div id="gameover-screen" class="container">
             <img src="./images/gameover.png" width="500" alt="logo">
-            <button id="restart-btn">Prueba de nuevo</button>
+            <div id="final-btns">
+                <button id="restart-btn">GO TO HELL!</button>
+                <button id="pantalla-inicio">HOME</button>
+            </div>
         </div>
     </div>
     <script src="./javascript/main.js"></script>
