--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 
     <div id="container">
-        <div>
-            <img id='logo-juego' src="./images/roadtohell.png" alt="">
-        </div>
+        
 
         <!-- SPLASH SCREEN -->
         <div id="splash-screen">
- 
+            <div>
+                <img id='logo-juego' src="./images/roadtohell-pixel.png" alt="">
+            </div>
             <div class='btn-principal'>
                 <button class="btn-bg">DALE CAÑA!</button>
             </div>    
@@ -28,11 +28,11 @@
         </div>
 
         <!-- GAME SCREEN -->
-        <canvas id="my-canvas" width="650" height="550"></canvas>
+        <canvas id="my-canvas" width="650" height="750"></canvas>
 
         <!-- GAME OVER SCREEN -->
         <div id="gameover-screen" class="container">
-            <img src="./images/gameover.png" width="500" alt="logo">
+            <img src="./images/final-screen.png" width="500" alt="logo">
             <div id="final-btns">
                 <button id="restart-btn">GO TO HELL!</button>
                 <button id="pantalla-inicio">HOME</button>
