--- a/index.html
+++ b/index.html
@@ -20,11 +20,20 @@
                 <img id='logo-juego' src="./images/roadtohell-pixel.png" alt="">
             </div>
             <div class='btn-principal'>
-                <button class="btn-bg">DALE CAÑA!</button>
-            </div>    
-            <div id="devil">
-                <img src="./images/devil2.png" alt="">
-            </div>
+                <button class="btn-bg">DALE CAÑA!</button> 
+                <article class="how-to-play" >
+                    <h3>COMO JUGAR</h3>
+                    <hr>
+                    <ul>
+                        <li>Presione los cursores para moverse hacia los lados</li><br>
+                        <li>Presione la barra espaciadora para bajar más rápido</li><br>
+                        <li>Si te chocas con un enemigo pierdes la mitad de la vida</li><br>
+                        <li>Cada cerveza recogida te dará XX puntos</li><br>
+                        <li>Consigue el máximo de puntos que puedas para llegar al infierno</li><br>
+                    </ul>
+                    <hr>
+                </article>
+        </div> 
         </div>
 
         <!-- GAME SCREEN -->
@@ -34,7 +43,7 @@
         <div id="gameover-screen" class="container">
             <img src="./images/final-screen.png" width="500" alt="logo">
             <div id="final-btns">
-                <button id="restart-btn">GO TO HELL!</button>
+                <button id="restart-btn">BACK TO HELL!</button>
                 <button id="pantalla-inicio">HOME</button>
             </div>
         </div>
