--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="./javascript/angus.js"></script>
     <script src="./javascript/cura.js"></script>
     <script src="./javascript/cerveza.js"></script>
-    <script src="./javascript/obispo.js"></script> -->
+    <script src="./javascript/obispo.js"></script>
 </body>
 
 </html>
