--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
                     <ul>
                         <li>Presione los cursores para moverse hacia los lados</li><br>
                         <li>Presione la barra espaciadora para bajar más rápido</li><br>
-                        <li>Si te chocas con un enemigo pierdes la mitad de la vida</li><br>
-                        <li>Cada cerveza recogida te dará XX puntos</li><br>
+                        <li>Cada tropiezo con un cura te quitará 50 puntos</li><br>
+                        <li>Cada cerveza recogida te dará 25 puntos</li><br>
+                        <li>Si tropiezas con un obispo, tienes menos de 0 puntos o te alzas al cielo... GAME OVER</li><br>
                         <li>Consigue el máximo de puntos que puedas para llegar al infierno</li><br>
                     </ul>
                     <hr>
                 </article>
-        </div> 
+            </div> 
         </div>
 
         <!-- GAME SCREEN -->
