--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <button id="restart-btn">BACK TO HELL!</button>
                 <button id="pantalla-inicio">HOME</button>
             </div>
+            <h4 id="puntos"><span> 0</span></h4>
         </div>
     </div>
     <script src="./javascript/main.js"></script>
