enter your name

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <div>
                 <img id='logo-juego' src="./images/roadtohell-pixel.png" alt="">
             </div>
+            <div id="name-container">
+                <form action="name">
+                    <input id="name" type="text" maxlength="14" size="15" placeholder="Enter your name...">
+                </form>
+            </div>
             <div class='btn-principal'>
                 <button class="btn-bg">DALE CAÑA!</button> 
                 <article class="how-to-play" >
