--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="name-container">
                 <form action="name">
-                    <input id="name" type="text" maxlength="20" size="21" placeholder="Enter your name...">
+                    <input id="name" type="text" maxlength="20" size="21" placeholder="Pon tu nombre...">
                 </form>
             </div>
             <div class='btn-principal'>
