--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <script src="./javascript/cura.js"></script>
     <script src="./javascript/cerveza.js"></script>
     <script src="./javascript/obispo.js"></script>
+    <script src="./javascript/rayo.js"></script>
 </body>
 
 </html>
