--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li>Presione la barra espaciadora para bajar más rápido</li><br>
                         <li>Cada tropiezo con un cura te quitará 50 puntos</li><br>
                         <li>Cada cerveza recogida te dará 25 puntos</li><br>
-                        <li>Si tropiezas con un obispo, tienes menos de 0 puntos o te alzas al cielo... GAME OVER</li><br>
+                        <li>Si tropiezas con un obispo, tienes menos de 0 puntos o subes al cielo... GAME OVER</li><br>
                         <li>Consigue el máximo de puntos que puedas para llegar al infierno</li><br>
                     </ul>
                     <hr>
@@ -57,11 +57,11 @@
     </div>
     <script src="./javascript/main.js"></script>
     <script src="./javascript/game.js"></script>
-    <script src="./javascript/angus.js"></script>
-    <script src="./javascript/cura.js"></script>
-    <script src="./javascript/cerveza.js"></script>
-    <script src="./javascript/obispo.js"></script>
-    <script src="./javascript/rayo.js"></script>
+    <script src="./javascript/player.js"></script>
+    <script src="./javascript/priest.js"></script>
+    <script src="./javascript/beer.js"></script>
+    <script src="./javascript/pope.js"></script>
+    <script src="./javascript/ray.js"></script>
 </body>
 
 </html>
