--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h3>COMO JUGAR</h3>
                     <hr>
                     <ul>
-                        <li>Presione los cursores para moverse hacia los lados</li><br>
+                        <li>Presione los cursores para moverse hacia los lados y hacia abajo</li><br>
                         <li>Presione la barra espaciadora para bajar más rápido</li><br>
                         <li>Cada tropiezo con un cura te quitará 50 puntos</li><br>
                         <li>Cada cerveza recogida te dará 25 puntos</li><br>
